# Web-page-Screenshot-Segmentation

./: .gitignore  CHANGELOG.md  README-ZH.md  README.md  pyproject.toml
Web_page_Screenshot_Segmentation/: __init__.py  blank_spliter.py  color_spliter.py  master.py  spliter.py
test/: blank_spliter_test.py  color_spliter_test.py
